Adding nvd3 directive in the demo.

--- a/src/partials/panel.tpl.html
+++ b/src/partials/panel.tpl.html
@@ -19,7 +19,7 @@
             </a>
 
         </div>
-        <!-- Order does matter here - title must come as last -->
+        <!-- Order does matter here - title must come last -->
         <h3 class="panel-title">{{panelModel.title}}</h3>
     </div>
 
